<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:id="@+id/college_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_college"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotolight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Details:"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotobold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bangalore Technological Institute"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotolight"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iso"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotolight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotolight"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact: contactus@btibangalore.org"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/title_size2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotolight"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission"/>
            
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Courses"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@font/robotobold"/>
        
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>
    </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>