<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/slider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bangalore Technological Institute"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/robotobold"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_college"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/robotolight"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/darkColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Departments"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="@dimen/title_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#FFFFFF"
                        android:fontFamily="@font/robotobold"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="AIML"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/title_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor2"
                                android:layout_margin="8dp"
                                android:fontFamily="@font/robotolight"/>
                            
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Civil"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/title_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor2"
                                android:layout_margin="8dp"
                                android:fontFamily="@font/robotolight"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="CSE"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/title_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor2"
                                android:layout_margin="8dp"
                                android:fontFamily="@font/robotolight"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="ECE"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/title_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor2"
                                android:layout_margin="8dp"
                                android:fontFamily="@font/robotolight"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="ME"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/title_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor2"
                                android:layout_margin="8dp"
                                android:fontFamily="@font/robotolight"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>



                        </LinearLayout>
                        
                    </com.google.android.material.card.MaterialCardView>





                </LinearLayout>


            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details:"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/robotobold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bangalore Technological Institute"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/robotolight"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iso"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/robotolight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/robotolight"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact: contactus@btibangalore.org"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/title_size2"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/robotolight"/>

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/map"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>